--- a/prez.ipynb
+++ b/prez.ipynb
@@ -1355,8 +1355,9 @@
     "<a id=\"comparing\"></a>\n",
     "## Comparing classifiers\n",
     "\n",
-    "Now that we have our labels and training data, we are free to apply any one of a variety of classification tools available.\n",
-    "- We'll use a handful of standard classification models included in [scikit-learn](https://scikit-learn.org/stable/), ranging in complexity."
+    "The `recordlinkage` package includes a variety of powerful [classifiers](https://recordlinkage.readthedocs.io/en/latest/ref-classifiers.html#), which we are now ready to use.\n",
+    "- But, now that we have our labels and training data, we are free to apply <i>any one</i> of a variety of classification tools available.\n",
+    "- So, let's use a handful of standard classification models included in [scikit-learn](https://scikit-learn.org/stable/), which range in complexity."
    ]
   },
   {
