--- a/prez.ipynb
+++ b/prez.ipynb
@@ -194,57 +194,6 @@
     }
    },
    "source": [
-    "# Overview\n",
-    "## Quick example\n",
-    "## Application areas\n",
-    "## Why do I care?\n",
-    "\n",
-    "# Challenges\n",
-    "- First, I want to make you aware of the specific, unique challenges involved with RL, so you can better appreciate why the approach includes the steps it does.\n",
-    "## Missing unique identifiers\n",
-    "- Records on people or businesses is often very 'messy' with inconsistent formatting from one database to the next.\n",
-    "- This makes finding unique matches unlikely. Instead, for each record there is a handful of plausible matches, each matching to a varying degree.\n",
-    "## Computational complexity\n",
-    "- Because any time you're working with Cartesian products you are working with a quadratic time complexity ($0(n^2)$), intelligent sub-setting of your data (via 'blocking') becomes essential.\n",
-    "## Lack of training labels\n",
-    "- Due to the expense of hand-labeling training data, we often need to use an unsupervised approach to RL.\n",
-    "## Privacy\n",
-    "- In spite of our attempts to keep nice, complete databases, people still demand privacy (go figure).\n",
-    "- As a result, fields that include identifying information are often removed or encrypted, adding to the challenge of our task.\n",
-    "    \n",
-    "\n",
-    "# Classic record linkage\n",
-    "- Second, I want to give you a snapshot of the classic record linkage approach which will include:\n",
-    "## Pre-processing\n",
-    "- Normalization of undesired variation\n",
-    "- Ensuring consistent formatting\n",
-    "## Indexing (blocking)\n",
-    "- To reduce the complexity of the task by beginning with smaller subsets of data that are very likely to contain matching records.\n",
-    "## Comparison and classification\n",
-    "- Classification of each record pair into 'matches' and 'non-matches' can be performed using either a deterministic (rule-based) or probabilistic (model-based) approach.\n",
-    "- In the probabilistic approach, comparisons between pairs are broken down into feature vectors summarizing their agreement along multiple dimensions, both simple (e.g. name, address, D.O.B.) and complex (e.g. distance between addresses).\n",
-    "- With those feature vectors, we can apply any one of hundreds of different classification models to attempt to predict whether those records are 'matches' or not.\n",
-    "## Evaluation\n",
-    "- Evaluation involves determining how successful the linkage was, in terms of correctly identified pairs.\n",
-    "- This can be complicated by the class imbalance between 'match' vs 'non-match' samples.\n",
-    "\n",
-    "# Demo\n",
-    "## Comparing classifiers\n",
-    "### Supervised classifiers\n",
-    "### Unsupervised classifiers\n",
-    "\n",
-    "# Conclusions\n",
-    "## Resources\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "### Notebook contents\n",
     "- [Overview](#overview)\n",
     "    - [Quick example](#example)\n",
@@ -258,6 +207,7 @@
     "    - [Privacy](#privacy)\n",
     "- [Classic record linkage](#classic)\n",
     "    - [Pre-processing](#pre)\n",
+    "        - [Segmentation](#segmentation)\n",
     "    - [Indexing (blocking)](#blocking)\n",
     "    - [Comparison and classification](#classification)\n",
     "    - [Evaluation](#evaluation)\n",
@@ -267,6 +217,19 @@
     "        - [Unsupervised classifiers](#unsupervised)\n",
     "- [Conclusions](#conclusions)\n",
     "    - [Resources](#resources)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "- First, I want to make you aware of the specific, unique challenges involved with RL, so you can better appreciate why the approach includes the steps it does.\n",
+    "- Second, I want to give you a snapshot of the classic record linkage approach.\n",
+    "- Finally, we will go through a demo together in which we compare the performance of a variety of classification models that we'll use for RL."
    ]
   },
   {
@@ -329,7 +292,7 @@
     "## Lack of training labels\n",
     "- In the typical (supervised) machine learning approach, labeled training data is used as feedback by a statistical model during the process of training. \n",
     "- In some cases, the there is no training data that tells us if two records correspond to the same individual or not.\n",
-    "- This can make the evaluation of the model's matches especially challenging."
+    "- This can make the evaluation of the model's matches especially challenging.\n"
    ]
   },
   {
@@ -343,6 +306,7 @@
     "<a id=\"privacy\"></a>\n",
     "## Privacy\n",
     "- Given that these records often contain sensitive personal information (such as medical/employment records), special attention must be paid to preserving this privacy via _'de-identification'_.\n",
+    "- This means that identifying information are often removed or encrypted, adding to the challenge of our task.\n",
     "- This is especially important for academic or medical researchers using HIPAA-protected datasets for research use."
    ]
   },
@@ -457,21 +421,63 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<a id=\"segmentation\"></a>\n",
+    "### Segmentation\n",
+    "We can break down many of our variables (e.g. full name) into several new variables (e.g. title, first name, last name)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<b>Rule-based</b> approaches work well for well-structured fields containing consistent information.\n",
+    "- Examples: regex, `if then` statements\n",
+    "- Unfortunately, manual approaches like these require one to invest more time, but can be quite robust with enough labor (and iterations) invested.\n",
+    "- Although, they will always be susceptible to unexpected variations in the data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<b>Statistical</b> approaches work by learning probability distributions regarding how elements in a field should be broken down into its constituent tokens.\n",
+    "- This approach entails classification of each element in a field as a particular token.\n",
+    "- The most popular tool for this approach, has been <b>hidden Markov models</b>.\n",
+    "    - HMMs classify a given token depending on the classification of previous tokens.\n",
+    "    - Like any other model, they need data to run. \n",
+    "    - One approach is to manually tokenize and segment a handful of input values and labeling those tokens by hand, and then use this as a training data for a segmentation model.\n",
+    "    - Notice, obtaining/creating data to train HMM is sometimes as much effort as assigning rules."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "%%% FILL OUT\n",
     "\n",
     "- Handling missing values\n",
     "- Handling outliers\n",
+    "\n",
     "---\n",
     "- Filtering Characters/Tokens\n",
     "- Standardization\n",
     "    - Phonetic encoding\n",
     "        - Used to convert words into the way they are spoken, rather than the way they are spelled, since the latter can be more culturally-specific.\n",
-    "        - Example: Soundex\n",
-    "- Segmentation\n",
-    "    - Rule-based\n",
-    "    - Statistical (HMM)"
+    "        - Example: Soundex"
    ]
   },
   {
@@ -500,6 +506,18 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<b>Minimally</b>, we should at least understand the number of unique values for each feature, as well as their frequency, and how many missing values each one contains.\n",
+    "- We will rely heavily on this information in the next stage: <i>indexing</i>."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -522,7 +540,8 @@
    "source": [
     "Like any good algorithm designer, though, we can start to think about where we can save ourselves from doing work.\n",
     "- The vast majority of record comparisons will be non-matches.\n",
-    "- Especially so for records that are dis-similar along particular dimensions."
+    "- Especially so for records that are dis-similar along particular dimensions.\n",
+    "- So, we begin with smaller subsets of data that are very likely to contain matching records.\n"
    ]
   },
   {
@@ -592,16 +611,41 @@
     "## Comparison and classification\n",
     "\n",
     "Next, the similarity between our candidate pairs is calculated by comparing several record attributes.\n",
-    "- This can range from simple numeric comparisons, like the difference between ages of each record, to more complex comparison functions, like 'fuzzy' string matching. \n",
-    "- A few examples of such comparisons are shown below.\n",
     "\n",
+    "\n",
+    "- Classification of each record pair into 'matches' and 'non-matches' can be performed using either a deterministic (rule-based) or probabilistic (model-based) approach.\n",
+    "- We'll focus on using a probabilistic approach, in which comparisons between pairs are broken down into feature vectors summarizing their agreement along multiple dimensions.\n",
+    "\n",
+    "- With those feature vectors, we can apply any one of hundreds of different classification models to attempt to predict whether those records are 'matches' or not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- Comparisons can range from simple numeric comparisons, like the difference between ages of each record, to more complex comparison functions, like 'fuzzy' string matching or distances between addresses. \n",
+    "- A few examples of such comparisons are shown below.\n",
     "<center>\n",
     "<img src=\"assets/record_comparison.png\" alt=\"Record comparison\" width=\"600\">\n",
-    "</center>\n",
-    "\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "The result is a <b>comparison vector</b> for each pair.\n",
     "- We calculated similarity using approximate comparisons for strings, edit distance for numbers, and equivalence for Booleans.\n",
-    "- This <i>feature vector</i> is what we use for classification."
+    "- This <i>feature vector</i> is what we use for classification.\n",
+    "- With those feature vectors, we can apply any available classification models (sklearn, statsmodels, tensorflow, etc.) to attempt to predict whether those records are 'matches' or not."
    ]
   },
   {
@@ -660,7 +704,8 @@
    "source": [
     "<a id=\"evaluation\"></a>\n",
     "## Evaluation\n",
-    "Of course, in order to evaluate our algorithm, we would prefer to have access to labeled data that can be used for validation.\n",
+    "Of course, we still need to determine how successful the linkage algorithm was, in terms of correctly identified pairs.\n",
+    "- To do so, we would prefer to have access to labeled data that can be used for validation.\n",
     "- This would contain the true match status of all possible matches."
    ]
   },
@@ -685,9 +730,11 @@
     }
    },
    "source": [
-    "In the event we <i>do</i> have labeled data, we must still contend with a formidable class imbalance, between matches and non-matches.\n",
+    "In the event we <i>do</i> have labeled data, we must still contend with a formidable class imbalance, between 'match' vs 'non-match' samples.\n",
     "- As a result, appropriate classification metrics must be applied.\n",
-    "    - Accuracy, for example, can grow very high by classifying everything as 'non-match'."
+    "    - Accuracy, for example, can grow very high by classifying everything as 'non-match'.\n",
+    "    \n",
+    "%%% Discuss appropriate metrics"
    ]
   },
   {
@@ -716,7 +763,7 @@
     "# Demo\n",
     "\n",
     "For this demo, we'll use the [Python Record Linkage Toolkit](https://recordlinkage.readthedocs.io/en/latest/about.html), a very popular and well-maintained library.\n",
-    "- In addition, it comes with a dataset generator, the [Freely Extensible Biomedical Record Linkage](http://users.cecs.anu.edu.au/~Peter.Christen/Febrl/febrl-0.3/febrldoc-0.3/manual.html) (Febrl) package."
+    "- In addition, it comes with a dataset generator, the [Freely Extensible Biomedical Record Linkage](http://users.cecs.anu.edu.au/~Peter.Christen/Febrl/febrl-0.3/febrldoc-0.3/manual.html) (Febrl) package, which we'll use for a brief demo here."
    ]
   },
   {
@@ -736,14 +783,6 @@
     "# record linkage toolkit\n",
     "import recordlinkage as rl\n",
     "from recordlinkage.datasets import load_febrl4\n",
-    "\n",
-    "# models\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.mixture import GaussianMixture\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# metrics\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -1051,6 +1090,7 @@
     "# compare_cl.exact('given_name', 'given_name', label='given_name')\n",
     "# compare_cl.string('surname', 'surname', method='jarowinkler', label='surname')\n",
     "# compare_cl.exact('date_of_birth', 'date_of_birth', label='date_of_birth')\n",
+    "\n",
     "compare_cl.exact('suburb', 'suburb', label='suburb')\n",
     "compare_cl.exact('state', 'state', label='state')\n",
     "compare_cl.string('address_1', 'address_1', label='address_1')\n",
@@ -1445,6 +1485,8 @@
     }
    ],
    "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
     "model_predictions['logreg'] = evaluate_model(LogisticRegression(solver='lbfgs', random_state=0))"
    ]
   },
@@ -1482,6 +1524,8 @@
     }
    ],
    "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
     "model_predictions['nb'] = evaluate_model(MultinomialNB())"
    ]
   },
@@ -1520,6 +1564,8 @@
     }
    ],
    "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
     "model_predictions['svc'] = evaluate_model(SVC(random_state=0))"
    ]
   },
@@ -1558,12 +1604,18 @@
     }
    ],
    "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
     "model_predictions['rf'] = evaluate_model(RandomForestClassifier(random_state=0))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<a id=\"unsupervised\"></a>\n",
     "### Unsupervised classifiers"
@@ -1571,7 +1623,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "#### K-means clustering"
    ]
@@ -1579,7 +1635,11 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1595,12 +1655,18 @@
     }
    ],
    "source": [
+    "from sklearn.cluster import KMeans\n",
+    "\n",
     "model_predictions['kmeans'] = evaluate_model(KMeans(n_clusters=2))"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "#### Expectation/Conditional Maximization Algorithm"
    ]
@@ -1608,7 +1674,11 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1624,16 +1694,22 @@
     }
    ],
    "source": [
+    "from sklearn.mixture import GaussianMixture\n",
+    "\n",
     "model_predictions['ecm'] = evaluate_model(GaussianMixture(n_components=2))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
-    "# we'll compute ROC curve and ROC area for each class\n",
+    "# compare model performances\n",
     "fpr = dict()\n",
     "tpr = dict()\n",
     "roc_auc = dict()\n",
@@ -1646,6 +1722,7 @@
     "      'kmeans', \n",
     "      'ecm']\n",
     "\n",
+    "# compute ROC curve and ROC area for each model\n",
     "for model in models:\n",
     "    fpr[model], tpr[model], _ = roc_curve(y_test, model_predictions[model])\n",
     "    roc_auc[model] = auc(fpr[model], tpr[model])"
@@ -1689,17 +1766,45 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<a id=\"conclusions\"></a>\n",
     "# Conclusions\n",
     "\n",
-    "- [%%%INSERT HIGH-LEVEL TAKEAWAYS HERE]"
+    "- Records on people or businesses is often very 'messy' with inconsistent formatting from one database to the next.\n",
+    "    - This makes finding unique matches unlikely. Instead, for each record there is a handful of plausible matches, each matching to a varying degree.\n",
+    "\n",
+    "\n",
+    "- Typically, pre-processing is necessary in order to normalize undesired variation and ensure consistent formatting.\n",
+    "\n",
+    "\n",
+    "- Since any time you're working with Cartesian products you're working with quadratic time complexity ($0(n^2)$), reducing the complexity of the task becomes essential.\n",
+    "    - We do so by beginning with smaller subsets of data that are very likely to contain matching records (i.e. 'blocking').\n",
+    "\n",
+    "\n",
+    "- Due to the expense of hand-labeling training data, we often need to use an unsupervised approach to RL.\n",
+    "\n",
+    "\n",
+    "- In spite of our attempts to keep nice, complete databases, people still demand privacy (go figure).\n",
+    "    - As a result, fields that include identifying information are often removed or encrypted, adding to the challenge of our task.\n",
+    "\n",
+    "\n",
+    "- Classification of each record pair into 'matches' and 'non-matches' can be performed using either a deterministic (rule-based) or probabilistic (model-based) approach.\n",
+    "    - Using a probabilistic approach, comparisons between pairs are broken down into feature vectors summarizing their agreement along multiple dimensions.\n",
+    "    - With those feature vectors, we can apply any one of hundreds of different classification models to attempt to predict whether those records are 'matches' or not."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "<a id=\"resources\"></a>\n",
     "## Resources\n",
