finished evaluation section

--- a/prez.ipynb
+++ b/prez.ipynb
@@ -25,7 +25,9 @@
     }
    },
    "source": [
-    "- Past projects:\n",
+    "Today, I'm going to talk about [record linkage](https://en.wikipedia.org/wiki/Record_linkage).\n",
+    "\n",
+    "- Some past projects:\n",
     "    - [Maternal data linkage](https://github.com/meccaLeccaHi/record_linkage)\n",
     "        - Effort to improve understanding of perinatal health outcomes in California.\n",
     "    - [Testing the impact of health workers in Mali](https://www.datakind.org/blog/tracking-patients-across-years-with-record-linkage)\n",
@@ -40,8 +42,18 @@
     }
    },
    "source": [
-    "<a id=\"overview\"></a>\n",
-    "\n",
+    "# Overview\n",
+    "<a id=\"overview\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "Everyone in this room can be conceptualized as a series of records that have, do, or will exist.\n",
     "- We begin with a birth certificate ...\n",
     "- ... and end with a death certificate.\n",
@@ -198,7 +210,6 @@
     "- [Challenges](#challenges)\n",
     "    - [Missing unique identifiers](#unique)\n",
     "    - [Computational complexity](#complexity)\n",
-    "\n",
     "- [Lack of training labels](#labels)\n",
     "    - [Privacy](#privacy)\n",
     "- [Classic record linkage](#classic)\n",
@@ -209,7 +220,11 @@
     "    - [Indexing (blocking)](#blocking)\n",
     "        - [Defining blocking keys](#keys)\n",
     "    - [Comparison and classification](#classification)\n",
-    "        - [Names](#names)\n",
+    "        - [Strings](#strings)\n",
+    "        - [Numbers](#numbers)\n",
+    "        - [Time](#time)\n",
+    "        - [Space](#space)\n",
+    "        - [Assignment](#assignment)\n",
     "    - [Evaluation](#evaluation)\n",
     "- [Demo](#demo)\n",
     "    - [Comparing classifiers](#comparing)\n",
@@ -500,8 +515,8 @@
    "source": [
     "<b>Statistical</b> approaches work by learning probability distributions regarding how elements in a field should be broken down into its constituent tokens.\n",
     "- This approach entails classification of each element in a field as a particular token.\n",
-    "- The most popular tool for this approach, has been <b>hidden Markov models</b>.\n",
-    "    - HMMs classify a given token depending on the classification of previous tokens.\n",
+    "- The most popular tool for this approach has been the <b>hidden Markov model</b>.\n",
+    "    - [HMM](https://en.wikipedia.org/wiki/Hidden_Markov_model)s classify a given token depending on the classification of previous tokens.\n",
     "    - Like any other model, they need data to run. \n",
     "    - One approach is to manually tokenize and segment a handful of input values and labeling those tokens by hand, and then use this as a training data for a segmentation model.\n",
     "    - Notice, obtaining/creating data to train HMM is sometimes as much effort as assigning rules."
@@ -754,8 +769,68 @@
     }
    },
    "source": [
+    "<a id=\"strings\"></a>\n",
+    "### Strings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### String comparisons\n",
+    "Strings are usually the most likely type to contain errors and typos, so rather than use exact matching, most RL employ comparison functions that return some indication of similarity on a continuum.\n",
+    "- [Edit distance](https://en.wikipedia.org/wiki/Edit_distance) (i.e. [Levenshtein distance](https://en.wikipedia.org/wiki/Levenshtein_distance)): Smallest number of single character insertions, deletions, and substitutions that are required to convert one string into the other.\n",
+    "- [Hamming distance](https://en.wikipedia.org/wiki/Hamming_distance): Measures the minimum number of substitutions required to change one string into the other,\n",
+    "- [Jaro-Winkler](https://en.wikipedia.org/wiki/Jaro%E2%80%93Winkler_distance): Developed at the U.S. Census Bureau -- it counts the number of equivalent characters within half the length of the longer string, and the number of transposes in the sets of common strings.\n",
+    "\n",
+    "| Name | Example   |\n",
+    "|------|------|\n",
+    "| Levenshtein edit distance | \"kitten\" and \"sitting\" is 3 |\n",
+    "| Hamming distance | \"karolin\" and \"kathrin\" is 3 |\n",
+    "| Jaro–Winkler distance | \"martha\",\"marhta\" is 0.944 |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Levenshtein: 2\n",
+      "Hamming: 2\n",
+      "Jaro: 0.8222222222222222\n"
+     ]
+    }
+   ],
+   "source": [
+    "# textdistance - https://pypi.org/project/textdistance/\n",
+    "import textdistance\n",
+    "\n",
+    "print('Levenshtein:', textdistance.levenshtein('banana', 'bahama') )\n",
+    "\n",
+    "print('Hamming:', textdistance.hamming('banana', 'bahama') )\n",
+    "\n",
+    "print('Jaro:', textdistance.jaro_winkler('banana', 'bahama') )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "<a id=\"names\"></a>\n",
-    "### Names\n",
+    "#### Names\n",
     "...play a big role in RL.\n",
     "- Since names are part of language, we know there are usually general rules, but those rules have lots of variability.\n",
     "- e.g. 'Robert', 'Bob', 'Bobby', 'Rob', 'Roberto'"
@@ -769,7 +844,7 @@
     }
    },
    "source": [
-    "#### Very culturally-specific\n",
+    "#### Culturally-specific\n",
     "- First, middle, family name is an Anglo-Saxon convention -- not representative of <i>most</i> of the world.\n",
     "- Compound names are common in many other cultures (e.g. 'Santiago Ramón y Cajal')"
    ]
@@ -796,16 +871,12 @@
     }
    },
    "source": [
-    "#### Numbers\n",
+    "<a id=\"numbers\"></a>\n",
+    "### Numbers\n",
     "In addition to strings, RL also sometimes includes numerical comparisons.\n",
     "- For example, comparing records including financial data such as income or expenses.\n",
     "- As with strings, we would like to be able to calculate an approximate similarity between two values.\n",
-    "    Examples:\n",
-    "    - Maximum absolute difference\n",
-    "    [ADD FORMULA]\n",
-    "    - Maximum percentage difference\n",
-    "    [ADD FORMULA]\n",
-    "- In both cases, we end up with a value between 1.0 (perfectly similar) and 0.0 (no similarity)."
+    "- Typically, we accomplish this by thresholding their difference (or percentage) relative to some cutoff ($d_{max}$), and linearly extrapolating anything below that to between 1.0 (perfect similarity) and 0.0 (total dissimilarity)."
    ]
   },
   {
@@ -816,11 +887,45 @@
     }
    },
    "source": [
-    "#### Time\n",
-    "Date, age, time comparisons\n",
-    "We can treat time data as a special case of numerical data and use a similar approach.\n",
-    "- For example, the Age percentage difference\n",
-    "[ADD FORMULA]"
+    "#### Examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Maximum absolute difference\n",
+    "$$ \n",
+    "sim_{absolute\\_difference} = \\left\\{\n",
+    "    \\begin{array}{l}\n",
+    "      1.0-(\\frac{|n_1-n_2|}{d_{max}}) \\hspace{3mm} if |n_1-n_2| < d_{max} , \\\\\n",
+    "      0.0  \\hspace{22mm}  else\n",
+    "    \\end{array}\n",
+    "\\right.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Maximum percentage difference\n",
+    "$$ \n",
+    "sim_{percentage\\_difference} = \\left\\{\n",
+    "    \\begin{array}{l}\n",
+    "      1.0-(\\frac{pc}{pc_{max}}) \\hspace{3mm} if pc < pc_{max} , \\\\\n",
+    "      0.0  \\hspace{22mm}  else\n",
+    "    \\end{array}\n",
+    "\\right.\n",
+    "$$"
    ]
   },
   {
@@ -831,7 +936,47 @@
     }
    },
    "source": [
-    "#### Space\n",
+    "<a id=\"time\"></a>\n",
+    "### Time\n",
+    "\n",
+    "We can treat time data (dates, ages, time comparisons, etc.) as a special case of numerical data and use a similar approach.\n",
+    "- For example, the we can calculate an 'age percentage difference':\n",
+    "\n",
+    "$$\n",
+    "apd = \\frac{|d_1-d_2|}{max(d_1,d_2)}*100\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- ... and then handle it just as we did above:\n",
+    "\n",
+    "$$ \n",
+    "sim_{age\\_perc\\_diff} = \\left\\{\n",
+    "    \\begin{array}{l}\n",
+    "      1.0-(\\frac{apd}{apd_{max}}) \\hspace{3mm} if apd < apd_{max} , \\\\\n",
+    "      0.0  \\hspace{22mm}  else\n",
+    "    \\end{array}\n",
+    "\\right.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<a id=\"space\"></a>\n",
+    "### Space\n",
     "Geographical distance comparisons\n",
     "As geocoding resources are becoming increasingly popular and available, it's worth mentioning that it can sometimes be utilized in RL, as well.\n",
     "- Rather than simply comparing addresses, we can actually calculate the distance (latitude and longitude) between those points on Earth.\n",
@@ -847,10 +992,92 @@
     }
    },
    "source": [
+    "<a id=\"assignment\"></a>\n",
+    "### Assignment\n",
+    "\n",
     "Using our comparison vector, we can now classify each record pair as either a 'match' or 'non-match'.\n",
     "- Given that this operation is performed on each record pair, <i>independently</i> of all other pairs, a given record may classify as a match for more than one record.\n",
+    "- The simplest way to do this would be to use a greedy algorithm, but this would result in some assignments being not optimal due to the [transitive closure](https://en.wikipedia.org/wiki/Transitive_closure) problem.\n",
+    "- It's a classic [assignment problem](https://en.wikipedia.org/wiki/Assignment_problem)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "> <b>For example,</b> assume a records $A$ and $B$ have a match weight of $42.21$.\n",
+    "> - But record $A$ has a weight of $39.01$ with $C$, and records $B$ and $C$ have a weight of $44.98$.\n",
+    "> - Assuming that the record pair list is sorted, a greedy assignment algorithm will assign record $A$ to record $B$ (because the weight is larger than for $(A,C)$), but then it can not assign record $C$ to record $A$ (even though it is optimal) because record $A$ has already been assigned.  \n",
+    ">\n",
+    "> | * | A | B | C |\n",
+    "> |-|-|-|-|\n",
+    "> | <b>A</b> | * | 42.21 | 39.01 | \n",
+    "> | <b>B</b> | 42.21 | * | 44.98 |\n",
+    "> | <b>C</b> | 39.01 | 44.98 | * |  \n",
+    ">\n",
+    "> - As a result, the assignment is not optimal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "As a result, one-to-one assignments must be <i>enforced manually</i>, though an additional step in our RL algorithm.\n",
+    "- This assignment problem can be solved with special algorithms that find the optimal solution over all possible assignments.\n",
+    "- For example, the [Hungarian algorithm](https://en.wikipedia.org/wiki/Hungarian_algorithm) is a combinatorial optimization algorithm that solves the assignment problem.\n",
+    "- But like many similar algorithms, it does so in polynomial time.\n",
+    "- This complexity is acceptable, however, given the reductions in problem size achieved via blocking."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lowest cost through this matrix:\n",
+      "[ 5,  9,  1]\n",
+      "[10,  3,  2]\n",
+      "[ 8,  7,  4]\n",
+      "(0, 2) -> 1\n",
+      "(1, 1) -> 3\n",
+      "(2, 0) -> 8\n",
+      "total cost: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sample program computing the lowest cost assignment from a cost matrix\n",
     "\n",
-    "%%% Put munkres here?"
+    "from munkres import Munkres, print_matrix # https://software.clapper.org/munkres/index.html\n",
+    "\n",
+    "matrix = [[5, 9, 1],\n",
+    "          [10, 3, 2],\n",
+    "          [8, 7, 4]]\n",
+    "m = Munkres()\n",
+    "indexes = m.compute(matrix)\n",
+    "print_matrix(matrix, msg='Lowest cost through this matrix:')\n",
+    "total = 0\n",
+    "for row, column in indexes:\n",
+    "    value = matrix[row][column]\n",
+    "    total += value\n",
+    "    print(f'({row}, {column}) -> {value}')\n",
+    "print(f'total cost: {total}')"
    ]
   },
   {
@@ -865,20 +1092,9 @@
     "## Evaluation\n",
     "Of course, we still need to determine how successful the linkage algorithm was, in terms of correctly identified pairs.\n",
     "- To do so, we would prefer to have access to labeled data that can be used for validation.\n",
-    "- This would contain the true match status of all possible matches."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "<b>Unfortunately</b>, obtaining ground-truth data is very often not possible and so other solutions must be applied.\n",
-    "\n",
-    "%%% Discuss unsupervised approaches here?"
+    "- This would contain the true match status of all possible matches.\n",
+    "- With this, we can precisely evaluate the accuracy of the fitted classifier.\n",
+    "- As always, it is essential that testing data are different than the training data, otherwise <i>over-fitting</i> will occur!"
    ]
   },
   {
@@ -891,9 +1107,10 @@
    "source": [
     "In the event we <i>do</i> have labeled data, we must still contend with a formidable class imbalance, between 'match' vs 'non-match' samples.\n",
     "- As a result, appropriate classification metrics must be applied.\n",
-    "    - Accuracy, for example, can grow very high by classifying everything as 'non-match'.\n",
-    "    \n",
-    "%%% Discuss appropriate metrics"
+    "    - Accuracy (or misclassification rate), for example, can grow very high by classifying everything as 'non-match', making it less meaningful for assessing the quality of a set of linked records.\n",
+    "    - Instead, precision and recall are used. \n",
+    "    - These can be combined into the [<i>$F$-measure</i>](https://en.wikipedia.org/wiki/F1_score), which is the harmonic mean of precision and recall.\n",
+    "    - The ideal balance between precision and recall will depend on your particular application (medical diagnosis, fraud detection, spam filtering, etc.)."
    ]
   },
   {
@@ -904,6 +1121,7 @@
     }
    },
    "source": [
+    "#### Possible matches\n",
     "In this talk, we'll focus on classifying record pairs as either a 'match' or 'non-match'.\n",
     "- However, a third classification can sometimes be useful -- 'possible match'.\n",
     "- These records can then undergo clerical review, and the classified records can then be added to the training data for your model, thus improving your classifier.\n",
@@ -1777,7 +1995,9 @@
    },
    "source": [
     "<a id=\"unsupervised\"></a>\n",
-    "### Unsupervised classifiers"
+    "### Unsupervised classifiers\n",
+    "\n",
+    "<b>Unfortunately</b>, obtaining ground-truth data is very often not possible and so other solutions must be applied."
    ]
   },
   {
@@ -1938,6 +2158,8 @@
     "<a id=\"conclusions\"></a>\n",
     "# Conclusions\n",
     "\n",
+    "---\n",
+    "\n",
     "1. Records on people or businesses is often very 'messy' with inconsistent formatting from one database to the next.\n",
     "    - This makes finding unique matches unlikely. Instead, for each record there is a handful of plausible matches, each matching to a varying degree.\n",
     "\n",
@@ -1975,14 +2197,7 @@
     "\n",
     "<a href=\"https://www.springer.com/gp/book/9783642311635\">\n",
     "    <img align=\"center\" src=\"https://images.springer.com/sgw/books/medium/9783642311635.jpg\" width=\"100\"alt=\"Data matching book\">\n",
-    "</a>\n",
-    "   \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "- [%%WHAT ELSE?]"
+    "</a>"
    ]
   }
  ],
