--- a/prez.ipynb
+++ b/prez.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "- I'm [Adam](https://www.adam-p-jones.com/).\n",
     "    - I'm a [data scientist](https://www.linkedin.com/in/adam-p-jones/) with an interest in complex problems in healthcare.\n",
-    "    - Formerly a Neuroscientist at the [NIH](https://www.nih.gov/).      "
+    "    - Formerly a [Neuroscientist](https://pubmed.ncbi.nlm.nih.gov/?term=adam+p+jones) at the [NIH](https://www.nih.gov/).      "
    ]
   },
   {
@@ -25,13 +25,23 @@
     }
    },
    "source": [
-    "Today, I'm going to talk about [record linkage](https://en.wikipedia.org/wiki/Record_linkage).\n",
-    "\n",
-    "- Some past projects:\n",
-    "    - [Maternal data linkage](https://github.com/meccaLeccaHi/record_linkage)\n",
-    "        - Effort to improve understanding of perinatal health outcomes in California.\n",
-    "    - [Testing the impact of health workers in Mali](https://www.datakind.org/blog/tracking-patients-across-years-with-record-linkage)\n",
-    "        - Probabilistic record linkage across consecutive census survey years."
+    "Today, I'm going to talk about [<b>record linkage</b>](https://en.wikipedia.org/wiki/Record_linkage) - the process of matching multiple records that correspond to the same entity.\n",
+    "- Records can be contained in 1 or more databases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Past projects:\n",
+    "- [Maternal data linkage](https://github.com/meccaLeccaHi/record_linkage)\n",
+    "    - Effort to improve understanding of perinatal health outcomes in California.\n",
+    "- [Testing the impact of health workers in Mali](https://www.datakind.org/blog/tracking-patients-across-years-with-record-linkage)\n",
+    "    - Probabilistic record linkage across consecutive census survey years."
    ]
   },
   {
@@ -42,8 +52,8 @@
     }
    },
    "source": [
-    "# Overview\n",
-    "<a id=\"overview\"></a>"
+    "# Motivation\n",
+    "<a id=\"motivation\"></a>"
    ]
   },
   {
@@ -66,7 +76,11 @@
    },
    "source": [
     "- We all begin with a <b>birth certificate</b>. \n",
-    "<img src=\"assets/birth_certs.png\" width=\"400\">"
+    "\n",
+    "<br>\n",
+    "<center>\n",
+    "    <img src=\"assets/birth_certs.png\" width=\"1400\" alt=\"birth certificates\">\n",
+    "</center>"
    ]
   },
   {
@@ -78,7 +92,11 @@
    },
    "source": [
     "- We all end with a <b>death certificate</b>.\n",
-    "<img src=\"assets/death_certs.png\" width=\"400\">"
+    "\n",
+    "<br>\n",
+    "<center>\n",
+    "    <img src=\"assets/death_certs.png\" width=\"1400\" alt=\"death certificates\">\n",
+    "</center>"
    ]
   },
   {
@@ -90,7 +108,11 @@
    },
    "source": [
     "- In between, there will be <b>medical records, school records, marriage records, bank records, arrest records,</b> etc.\n",
-    "<img src=\"assets/in_between.png\" width=\"600\">"
+    "\n",
+    "<br>\n",
+    "<center>\n",
+    "    <img src=\"assets/in_between.png\" width=\"1200\" alt=\"records examples\">\n",
+    "</center>"
    ]
   },
   {
@@ -101,7 +123,18 @@
     }
    },
    "source": [
-    "<b><i>Imagine</i></b> what we could learn about ourselves by integrating all of that information, from all of those different sources, into one single, cohesive story..."
+    "> <b><i>Imagine</i></b> what we could learn about ourselves by integrating all of that information, from all of those different sources, into one single, cohesive story..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "> <b><i>Imagine</i></b> if it was consistently formatted, with no missing values."
    ]
   },
   {
@@ -128,14 +161,15 @@
    "source": [
     "## Quick example\n",
     "\n",
-    "- Public health example: Joining hospital records to birth certificates.\n",
-    "    - What problems would occur?\n",
-    "        1. People change\n",
-    "            - Names, addresses, ...\n",
-    "        2. People make mistakes\n",
-    "            - Typos, spelling errors, nicknames, abbreviations, ...\n",
-    "        3. People lie\n",
-    "            - Age, weight, neighborhood, ..."
+    "<b>Public health problem</b>: Joining hospital records to birth certificates.\n",
+    "\n",
+    "<i>What problems are likely to occur?</i>\n",
+    "> 1. People change\n",
+    ">     - Names, addresses, ...\n",
+    "> 2. People make mistakes\n",
+    ">     - Typos, spelling errors, nicknames, abbreviations, ...\n",
+    "> 3. People lie\n",
+    ">     - Age, weight, neighborhood, ..."
    ]
   },
   {
@@ -148,7 +182,26 @@
    "source": [
     "<a id=\"areas\"></a>\n",
     "## Application areas\n",
-    "Data matching is not new -- well before computers, we needed to match records belonging to the same individual.  "
+    "Data matching is <i>not</i> new. \n",
+    "- Well before computers, we needed to match records belonging to the same individual.\n",
+    "- Record-keeping, itself, goes all the way back to the beginning of written-language.\n",
+    "\n",
+    "<br>\n",
+    "<center>\n",
+    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/3/3d/Rembrandt_-_Moses_with_the_Ten_Commandments_-_Google_Art_Project.jpg\" alt=\"Attempting the first join\" width=\"300\">\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "> I'd like to think that shortly after inventing the record, someone needed record-linkage.\n",
+    "> - But, in the interest of time, we'll skip ahead a few millenia..."
    ]
   },
   {
@@ -159,15 +212,14 @@
     }
    },
    "source": [
+    "<center>\n",
+    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Seal_of_the_United_States_Census_Bureau.svg/200px-Seal_of_the_United_States_Census_Bureau.svg.png\" alt=\"Census Bureau seal\" width=\"250\">\n",
+    "</center>  \n",
+    "\n",
     "#### National census\n",
     "- Governments around the world rely on census data to allocate resources appropriately.\n",
     "- RL plays an important role in improving the quality and accuracy of census data.\n",
-    "- The U.S. Census Bureau has played a major role in the development of RL techniques for several decades -- developed several popular algorithms widely used in RL today.\n",
-    "\n",
-    "<br>\n",
-    "<center>\n",
-    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Seal_of_the_United_States_Census_Bureau.svg/200px-Seal_of_the_United_States_Census_Bureau.svg.png\" alt=\"Census Bureau seal\" width=\"250\">\n",
-    "</center>  "
+    "- The U.S. Census Bureau has played a major role in the development of RL techniques for several decades -- developed several popular algorithms widely used in RL today."
    ]
   },
   {
@@ -178,14 +230,13 @@
     }
    },
    "source": [
-    "#### Medicine and public health \n",
-    "- Simply consider all of the doctors, hospitals, insurance companies, and pharmacies you've interacted with and it becomes obvious why medical records are one of the largest RL application areas.\n",
-    "- In addition, _longitudinally-matched records_ can provide novel insights into health outcomes, as in the example given previously.\n",
-    "\n",
-    "<br>\n",
     "<center>\n",
     "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Seattle_physician_with_patient_1999.jpg/256px-Seattle_physician_with_patient_1999.jpg\" width=\"350\" alt=\"Seattle physician with patient 1999\" >\n",
-    "</center>"
+    "</center>\n",
+    "\n",
+    "#### Medicine and public health \n",
+    "- Simply consider all of the doctors, hospitals, insurance companies, and pharmacies you've interacted with and it becomes obvious why medical records are one of the largest RL application areas.\n",
+    "- In addition, _longitudinally-matched records_ can provide novel insights into health outcomes, as in the example given previously."
    ]
   },
   {
@@ -196,14 +247,13 @@
     }
    },
    "source": [
-    "#### Customer records\n",
-    "- In order to effectively target their customers, businesses need to minimize the redundancy that tends to occur as a result of changes in name, address, etc.\n",
-    "- This requires businesses to periodically remove redundant records, in order to maintain an accurate record of their customer base (often a main source of revenue) and reach those customers effectively.\n",
-    "    \n",
-    "<br>\n",
     "<center>\n",
     "    <img src=\"https://upload.wikimedia.org/wikipedia/en/7/78/DB-database-icon.png\" alt=\"DB-database-icon.png\" width=\"250\">\n",
-    "</center>"
+    "</center>\n",
+    "\n",
+    "#### Customer records\n",
+    "- In order to effectively target their customers, businesses need to minimize the redundancy that tends to occur as a result of changes in name, address, etc.\n",
+    "- This requires businesses to periodically remove redundant records, in order to maintain an accurate record of their customer base (often a main source of revenue) and reach those customers effectively."
    ]
   },
   {
@@ -214,14 +264,13 @@
     }
    },
    "source": [
-    "#### Genealogy\n",
-    "- Given that more than 10% of men and women were named 'John' and 'Mary' in nineteenth century England, it becomes obvious why RL is an invaluable tool for genealogical databases, some of which are now a billion-dollar industry.\n",
-    "    - [FamilySearch](https://en.wikipedia.org/wiki/FamilySearch) (Church of LDS) have invested heavily in RL and published several technical reports on the subject.\n",
-    "   \n",
-    "<br>\n",
     "<center>\n",
     "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/a/a8/1900_census_Kershaw_Lindauer.gif\" alt=\"1900 census Kershaw Lindauer.gif\" width=\"350|\">\n",
-    "</center>"
+    "</center>\n",
+    "\n",
+    "#### Genealogy\n",
+    "- Given that more than 10% of men and women were named 'John' and 'Mary' in nineteenth century England, it becomes obvious why RL is an invaluable tool for genealogical databases, some of which are now a billion-dollar industry.\n",
+    "    - [FamilySearch](https://en.wikipedia.org/wiki/FamilySearch) (i.e. Church of LDS) have invested heavily in RL and published several technical reports on the subject."
    ]
   },
   {
@@ -272,7 +321,7 @@
    },
    "source": [
     "### Notebook contents\n",
-    "- [Overview](#overview)\n",
+    "- [Motivation](#motivation)\n",
     "    - [Quick example](#example)\n",
     "    - [Application areas](#areas)\n",
     "    - [Why do I care?](#why)\n",
@@ -314,7 +363,7 @@
    "source": [
     "<a id=\"challenges\"></a>\n",
     "# Challenges\n",
-    "i.e. 'Why can't we just `JOIN`?'"
+    "i.e. 'Why can't I just `JOIN`?'"
    ]
   },
   {
@@ -450,13 +499,14 @@
    "source": [
     "<a id=\"pre\"></a>\n",
     "## Pre-processing\n",
+    "Records from different databases often vary wildly in their formatting conventions.\n",
+    "\n",
     "<br>\n",
     "<center>\n",
     "<img src=\"assets/record_examples.png\" alt=\"Example records\" width=\"700\">\n",
     "</center>\n",
     "\n",
-    "Records from different databases often vary wildly in their formatting conventions.\n",
-    "- As a result, it falls to use to ensure that the data we want to compare has been properly cleaned and standardized.\n",
+    "As a result, it falls to use to ensure that the data we want to compare has been properly cleaned and standardized.\n",
     "- Any inconsistencies _must_ be resolved for successful linkage."
    ]
   },
@@ -910,7 +960,7 @@
     "\n",
     "print('Hamming:', textdistance.hamming('banana', 'bahama') )\n",
     "\n",
-    "print('Jaro:', textdistance.jaro_winkler('banana', 'bahama') )\n"
+    "print('Jaro:', textdistance.jaro_winkler('banana', 'bahama') )"
    ]
   },
   {
@@ -936,7 +986,7 @@
     }
    },
    "source": [
-    "#### Culturally-specific\n",
+    "<i>Culture</i>\n",
     "- First, middle, family name is an Anglo-Saxon convention -- not representative of <i>most</i> of the world.\n",
     "- Compound names are common in many other cultures (e.g. 'Santiago Ramón y Cajal')"
    ]
@@ -949,9 +999,9 @@
     }
    },
    "source": [
-    "How names change, or stay the same, depends on your culture.\n",
-    "- In certain cultures, first and last name are sometimes used in the reverse order. \n",
-    "- For this reason, it also a good idea to include cross comparisons. \n",
+    "How names change, or stay the same, can also be very <i>culturally-specific</i>.\n",
+    "- In some places, first and last name are sometimes used in the reverse order. \n",
+    "- For this reason, it also a good idea to include cross comparisons.\n",
     "    - For example, including a comparison of first name with last name can catch instances of their reversal."
    ]
   },
@@ -966,9 +1016,19 @@
     "<a id=\"numbers\"></a>\n",
     "### Numbers\n",
     "In addition to strings, RL also sometimes includes numerical comparisons.\n",
-    "- For example, comparing records including financial data such as income or expenses.\n",
-    "- As with strings, we would like to be able to calculate an approximate similarity between two values.\n",
-    "- Typically, we accomplish this by thresholding their difference (or percentage) relative to some cutoff ($d_{max}$), and linearly extrapolating anything below that to between 1.0 (perfect similarity) and 0.0 (total dissimilarity)."
+    "- For example, comparing records including age or financial data such as income or expenses.\n",
+    "- As with strings, we would like to be able to calculate an approximate similarity between two values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<i>Typically</i>, we accomplish this by thresholding their difference (or percentage) relative to some cutoff ($d_{max}$), and linearly extrapolating anything below that to between 1.0 (perfect similarity) and 0.0 (total dissimilarity)."
    ]
   },
   {
@@ -990,14 +1050,29 @@
     }
    },
    "source": [
-    "- Maximum absolute difference\n",
-    "$$ \n",
+    "- Maximum absolute difference ($d$)\n",
+    "$$\n",
+    "d = |n_1-n_2|\\\\\n",
     "sim_{absolute\\_difference} = \\left\\{\n",
     "    \\begin{array}{l}\n",
-    "      1.0-(\\frac{|n_1-n_2|}{d_{max}}) \\hspace{3mm} if |n_1-n_2| < d_{max} , \\\\\n",
+    "      1.0-\\frac{d}{d_{max}} \\hspace{3mm} if d < d_{max} , \\\\\n",
     "      0.0  \\hspace{22mm}  else\n",
     "    \\end{array}\n",
     "\\right.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "- Maximum percentage difference ($pd$)\n",
+    "$$\n",
+    "pd = \\frac{|n_1-n_2|}{max(|n_1|,|n_2|)}*100\n",
     "$$"
    ]
   },
@@ -1009,11 +1084,10 @@
     }
    },
    "source": [
-    "- Maximum percentage difference\n",
-    "$$ \n",
+    "$$\n",
     "sim_{percentage\\_difference} = \\left\\{\n",
     "    \\begin{array}{l}\n",
-    "      1.0-(\\frac{pc}{pc_{max}}) \\hspace{3mm} if pc < pc_{max} , \\\\\n",
+    "      1.0-(\\frac{pd}{pd_{max}}) \\hspace{3mm} if pd < pd_{max} , \\\\\n",
     "      0.0  \\hspace{22mm}  else\n",
     "    \\end{array}\n",
     "\\right.\n",
