touching up slides

--- a/prez.ipynb
+++ b/prez.ipynb
@@ -123,18 +123,9 @@
     }
    },
    "source": [
-    "> <b><i>Imagine</i></b> what we could learn about ourselves by integrating all of that information, from all of those different sources, into one single, cohesive story..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "> <b><i>Imagine</i></b> if it was consistently formatted, with no missing values."
+    "> <b><i>Imagine</i></b> what we could learn about ourselves by integrating all of that information, from all of those different sources, into one single, cohesive story...\n",
+    ">\n",
+    "> ... with consistent formatting, and no missing values."
    ]
   },
   {
@@ -146,7 +137,7 @@
    },
    "source": [
     "And, if data were perfectly clean, this would all reduce to a simple `JOIN` operation.\n",
-    "- <b>But it's <i>not</i>.</b> \n",
+    "#### But it's <i>not</i>.\n",
     "- This is why we need techniques to integrate inconsistent data.\n",
     "- Those techniques will be the focus of this talk."
    ]
@@ -159,8 +150,17 @@
     }
    },
    "source": [
-    "## Quick example\n",
-    "\n",
+    "## Quick example\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "<b>Public health problem</b>: Joining hospital records to birth certificates.\n",
     "\n",
     "<i>What problems are likely to occur?</i>\n",
@@ -181,7 +181,17 @@
    },
    "source": [
     "<a id=\"areas\"></a>\n",
-    "## Application areas\n",
+    "## Application areas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "Data matching is <i>not</i> new. \n",
     "- Well before computers, we needed to match records belonging to the same individual.\n",
     "- Record-keeping, itself, goes all the way back to the beginning of written-language.\n",
@@ -2387,7 +2397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
