--- a/prez.ipynb
+++ b/prez.ipynb
@@ -52,8 +52,9 @@
     }
    },
    "source": [
+    "<a id=\"motivation\"></a>\n",
     "# Motivation\n",
-    "<a id=\"motivation\"></a>"
+    "---"
    ]
   },
   {
@@ -210,7 +211,7 @@
     }
    },
    "source": [
-    "> I'd like to think that shortly after inventing the record, someone needed record-linkage.\n",
+    "> I'd like to think that shortly after inventing the record, someone invented the typo, and thus needed record-linkage.\n",
     "> - But, in the interest of time, we'll skip ahead a few millenia..."
    ]
   },
@@ -246,7 +247,7 @@
     "\n",
     "#### Medicine and public health \n",
     "- Simply consider all of the doctors, hospitals, insurance companies, and pharmacies you've interacted with and it becomes obvious why medical records are one of the largest RL application areas.\n",
-    "- In addition, _longitudinally-matched records_ can provide novel insights into health outcomes, as in the example given previously."
+    "- In addition, <b>longitudinal-matching</b> of records can provide novel insights into health outcomes, as in the example given previously."
    ]
   },
   {
@@ -263,7 +264,7 @@
     "\n",
     "#### Customer records\n",
     "- In order to effectively target their customers, businesses need to minimize the redundancy that tends to occur as a result of changes in name, address, etc.\n",
-    "- This requires businesses to periodically remove redundant records, in order to maintain an accurate record of their customer base (often a main source of revenue) and reach those customers effectively."
+    "- This requires the <b>periodic removal of redundant records</b>, in order to maintain an accurate record of their customer base (often a main source of revenue) and reach those customers effectively."
    ]
   },
   {
@@ -303,8 +304,10 @@
     }
    },
    "source": [
-    "- As a society, we are producing more data than ever before. In order to make use of it, we need intelligent solutions to integrate data from disparate sources.\n",
-    "- Such tools play an important role in both data mining _and_ data warehousing -- using RL, we can not only improve the quality (and statistical power) of our data, but also reveal relationships not contained within any single database."
+    "- As a society, we are producing more data than ever before. \n",
+    "    - In order to make use of it, we need intelligent solutions to integrate data from disparate sources.\n",
+    "- Such tools play an important role in both data mining _and_ data warehousing.\n",
+    "    - We can not only improve the quality (and statistical power) of our data, but also reveal relationships not contained within any single database."
    ]
   },
   {
@@ -317,9 +320,9 @@
    "source": [
     "<a id=\"objectives\"></a>\n",
     "### Objectives\n",
-    "1. First, I want to make you aware of the specific, unique challenges involved with RL, so you can better appreciate why the approach includes the steps it does.\n",
-    "2. Second, I want to give you a snapshot of the classic record linkage approach.\n",
-    "3. Finally, we will go through a demo together in which we compare the performance of a variety of classification models that we'll use for RL."
+    "1. <i>First</i>, I want to make you aware of the specific, unique challenges involved with RL, so you can better appreciate why the approach includes the steps it does.\n",
+    "2. <i>Second</i>, I want to give you a snapshot of the classic record linkage approach.\n",
+    "3. <i>Third</i>, we will go through a demo together in which we compare the performance of a variety of classification models that we'll use for RL."
    ]
   },
   {
@@ -373,6 +376,7 @@
    "source": [
     "<a id=\"challenges\"></a>\n",
     "# Challenges\n",
+    "---\n",
     "i.e. 'Why can't I just `JOIN`?'"
    ]
   },
@@ -388,13 +392,33 @@
     "## Missing unique identifiers\n",
     "\n",
     "In all of these cases, the challenge that we have to overcome is missing a unique identifier for the entities we are matching.\n",
-    "- For example, if we had perfectly accurate social security numbers for each record, the task is reduced to a straight-forward join of two databases.\n",
-    "- This is often not the case for multiple reasons:\n",
-    "    1. accurate record keeping is hard\n",
-    "    2. privacy is usually a concern (in some countries use of such identifiers is illegal).\n",
-    "- As such, in order to match records across databases, we must use common attributes shared by both databases.\n",
-    "    - e.g. Name, address, phone number, age\n",
-    "- The quality of data points such as these are notoriously low for reasons described earlier."
+    "- <i>For example</i>, if we had perfectly accurate social security numbers for each record, the task is reduced to a straight-forward join of two databases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "This is often not the case for multiple reasons:\n",
+    "1. accurate record keeping is hard\n",
+    "2. privacy is usually a concern (in some countries use of such identifiers is illegal)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "As such, in order to match records across databases, we must use common attributes shared by both databases.\n",
+    "- e.g. Name, address, phone number, age\n",
+    "- <i>But</i>, the quality of data points such as these are notoriously low for reasons described earlier."
    ]
   },
   {
@@ -407,7 +431,7 @@
    "source": [
     "<a id=\"privacy\"></a>\n",
     "## Privacy\n",
-    "- Given that these records often contain sensitive personal information (such as medical/employment records), special attention must be paid to preserving this privacy via _'de-identification'_.\n",
+    "Given that these records often contain sensitive personal information (such as medical/employment records), special attention must be paid to preserving this privacy via <i>'de-identification'</i>.\n",
     "- This means that identifying information are often removed or encrypted, adding to the challenge of our task.\n",
     "- This is especially important for academic or medical researchers using HIPAA-protected datasets for research use."
    ]
@@ -422,7 +446,7 @@
    "source": [
     "<a id=\"complexity\"></a>\n",
     "## Computational complexity\n",
-    "- As a naive approach, one might try comparing each record in one database, to each record in the other, to determine if each pair under consideration might be a match.\n",
+    "As a naive approach, one might try comparing each record in one database, to each record in the other, to determine if each pair under consideration might be a match.\n",
     "- The computational complexity - $O(N²)$ - of such an approach, however, grows quadratically with the size of the smaller database.\n",
     "- As we'll see, some nice tricks exist to reduce the size of the problem substantially."
    ]
@@ -437,7 +461,7 @@
    "source": [
     "<a id=\"labels\"></a>\n",
     "## Lack of training labels\n",
-    "- In the typical (supervised) machine learning approach, labeled training data is used as feedback by a statistical model during the process of training. \n",
+    "In the typical (supervised) machine learning approach, labeled training data is used as feedback by a statistical model during the process of training. \n",
     "- In some cases, the there is no training data that tells us if two records correspond to the same individual or not.\n",
     "- This can make the evaluation of the model's matches especially challenging.\n"
    ]
@@ -452,10 +476,10 @@
    "source": [
     "<a id=\"classic\"></a>\n",
     "# Classic record linkage\n",
-    "I will use 'record linkage' to refer to both the matching of records across two (or more) databases.\n",
-    "- This can also include the special case of _'de-duplication'_, which simply involves using the same approach* to find duplicate records in _the same_ database.\n",
-    "\n",
-    "<div style=\"text-align: right\">*De-duplication can sometimes involve matching more than 2 records within a database.</div>"
+    "---\n",
+    "Next, we'll describe some solutions to several of these problems.\n",
+    "- I will use 'record linkage' to refer to both the matching of records.\n",
+    "- This can also include the special case of <i>'de-duplication'</i>, which simply involves using the same approach to find duplicate records in a <i>single</i> database."
    ]
   },
   {
@@ -466,9 +490,14 @@
     }
    },
    "source": [
-    "Most commonly, each record refers to a real, live person (shown here).<center>\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/6/68/Akha_cropped_hires.JPG\" alt=\"Akha cropped hires.JPG\" width=\"150\">\n",
-    "</center>"
+    "Most commonly, the records we seek to link refer to a real, live person (shown here).\n",
+    "\n",
+    "<br>\n",
+    "<center>\n",
+    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/6/68/Akha_cropped_hires.JPG\" alt=\"People\" width=\"250\">\n",
+    "</center>\n",
+    "\n",
+    "- Although, sometimes the entity to be matched is a business, or some other object."
    ]
   },
   {
@@ -482,8 +511,7 @@
     "<b>Examples:</b>\n",
     "- Customers in a business database\n",
     "- Constituents in a government database\n",
-    "- Patients in a hospital database\n",
-    "> Although, sometimes the entity to be matched is a business, or some other object."
+    "- Patients in a hospital database"
    ]
   },
   {
@@ -541,7 +569,7 @@
    "source": [
     "<b>1. Removing undesired characters/words</b>\n",
     "- Non-alphanumeric characters\n",
-    "- In some cases, removing irrelevant words (_stop words_) is useful."
+    "- In some cases, removing irrelevant words (<i>stop words</i>) is useful."
    ]
   },
   {
@@ -565,7 +593,7 @@
    },
    "source": [
     "<b>3. Parsing input to create new variables (feature engineering)</b>\n",
-    "- As we'll see, parsing our raw data into it's component elements allows us to model each of them individually, often resulting in a better performing model _and_ a greater ability to make inferences about which variables are most important during classification.   "
+    "- As we'll see, parsing our raw data into it's component elements allows us to model each of them individually, often resulting in a better performing model <i>and</i> a greater ability to make inferences about which variables are most important during classification.   "
    ]
   },
   {
@@ -603,7 +631,7 @@
    },
    "source": [
     "#### Missing values\n",
-    "- The <b>removal of rows</b> in RL can result in fewer correctly-linked record pairs, so this option is usually avoided.\n",
+    "- The <b>removal of rows</b> in RL can result in fewer correctly-linked record pairs, so this option <i>is usually avoided</i>.\n",
     "    - The exception being rows with so little information they are unlikely to be matched anyway.\n",
     "- The <b>removal of columns</b> can also be detrimental to the accuracy of our linkage.\n",
     "    - Even if there are many records missing a value, the records that do will still be able to use that information for matching."
@@ -618,9 +646,10 @@
    },
    "source": [
     "#### Outliers\n",
-    "Smoothing or removing noisy values can also be detrimental to the accuracy of our linkage, so it is usually not applied.\n",
+    "Smoothing or removing noisy values can also be detrimental to the accuracy of our linkage, so <i>it is usually not applied</i>.\n",
     "- Outliers can still contain useful information.\n",
-    "- For example, an age of '150' could actually be a typo of '15', which would actually be fairly close in edit distance. This information would be lost if smoothing were applied.\n",
+    "    - For example, an age of '150' could actually be a typo of '15', which would actually be fairly close in edit distance. \n",
+    "    - This information would be lost if smoothing were applied.\n",
     "- Our model won't see them anyway! \n",
     "    - Unusual values usually don't make it beyond the comparison vector."
    ]
@@ -669,8 +698,8 @@
    "source": [
     "<b>Rule-based</b> approaches work well for well-structured fields containing consistent information.\n",
     "- Examples: regex, `if then` statements\n",
-    "- Unfortunately, manual approaches like these require one to invest more time, but can be quite robust with enough labor (and iterations) invested.\n",
-    "- Although, they will always be susceptible to unexpected variations in the data."
+    "- Although, manual approaches like these require a greater invest of time, they can become quite robust with enough labor (and iterations) invested.\n",
+    "    - Unfortunately, they will still always be susceptible to unexpected variations in the data."
    ]
   },
   {
@@ -699,17 +728,16 @@
    },
    "source": [
     "Ideally, after pre-processing, those same records would look something like this below.\n",
+    "\n",
     "<br>\n",
     "<center>\n",
-    "<img src=\"assets/record_clean.png\" alt=\"Example records\" width=\"800\">\n",
+    "    <img src=\"assets/record_clean.png\" alt=\"Example records\" width=\"800\">\n",
     "</center>\n",
     "\n",
     "- Our data now contains all attributes from both databases.\n",
     "- Content has been standardized.\n",
-    "- Contradicting fields have been corrected\n",
-    "- Abbreviations have been expanded\n",
-    "\n",
-    "\n"
+    "- Contradicting fields have been corrected.\n",
+    "- Abbreviations have been expanded."
    ]
   },
   {
@@ -720,7 +748,7 @@
     }
    },
    "source": [
-    "<b>Minimally</b>, we should at least understand the number of unique values for each feature, as well as their frequency, and how many missing values each one contains.\n",
+    "<b>Minimally</b>, we should <i>at least</i> understand the number of unique values for each feature, as well as their frequency, and how many missing values each one contains.\n",
     "- We will rely heavily on this information in the next stage: <i>indexing</i>."
    ]
   },
@@ -1328,6 +1356,7 @@
    "source": [
     "<a id=\"demo\"></a>\n",
     "# Demo\n",
+    "---\n",
     "\n",
     "For this demo, we'll use the [Python Record Linkage Toolkit](https://recordlinkage.readthedocs.io/en/latest/about.html), a very popular and well-maintained library.\n",
     "- In addition, it comes with a dataset generator, the [Freely Extensible Biomedical Record Linkage](http://users.cecs.anu.edu.au/~Peter.Christen/Febrl/febrl-0.3/febrldoc-0.3/manual.html) (Febrl) package, which we'll use for a brief demo here."
